manifests/prodlab/bots/betterplayer-canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: betterplayer-canary-bot
  namespace: prodlab
  labels:
    app.kubernetes.io/name: betterplayer-canary-bot
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: betterplayer-canary-bot
  template:
    metadata:
      labels:
        app.kubernetes.io/name: betterplayer-canary-bot
    spec:
      automountServiceAccountToken: false
      containers:
      - name: betterplayer-canary-bot
        imagePullPolicy: Always
        image: docker-registry.k8s.array21.dev/betterplayer-bot:latest
        securityContext:
          capabilities:
            drop:
            - CAP_NET_RAW
