manifests/prodlab/bots/betterplayer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: betterplayer-bot
  namespace: prodlab
  labels:
    app: betterplayer-bot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: betterplayer-bot
  template:
    metadata:
      labels:
        app: betterplayer-bot
    spec:
      containers:
      - name: betterplayer-bot
        imagePullPolicy: Always
        image: docker-registry.k8s.array21.dev/betterplayer-bot:latest
