manifests/prodlab/bots/catexplorer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catexplorer
  namespace: prodlab
  labels:
    app: catexplorer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catexplorer
  template:
    metadata:
      labels:
        app: catexplorer
    spec:
      automountServiceAccountToken: false
      containers:
      - name: catexplorer
        image: thedutchmc/catexplorer:latest
        volumeMounts:
        - name: data
          mountPath: /data
      volumes:
       - name: data
         persistentVolumeClaim:
           claimName: catexplorer
