manifests/prodlab/bots/doggobot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: doggobot
  namespace: prodlab
  labels:
    app: doggobot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: doggobot
  template:
    metadata:
      labels:
        app: doggobot
    spec:
      containers:
      - name: doggobot
        image: docker-registry.k8s.array21.dev/doggobot:latest
        volumeMounts:
        - name: images
          mountPath: /app
      volumes:
       - name: images
         persistentVolumeClaim:
           claimName: doggobot
