manifests/prodlab/bots/netherlandsbot-core.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netherlandsbot-core
  labels:
    app: netherlandsbot-core
spec:
  replicas: 1
  selector:
    matchLabels:
      app: netherlandsbot-core
  template:
    metadata:
      labels:
        app: netherlandsbot-core
    spec:
      containers:
      - name: netherlandsbot-core
        image: docker-registry.k8s.array21.dev/netherlandsbot-core:latest
        volumeMounts:
        - name: config
          mountPath: /config
        - name: module-config
          mountPath: /moduleconfig/
        - name: modules
          mountPath: /modules
      volumes:
      - name: config
        secret:
          secretName: netherlandsbot-core
          items:
          - key: config
            path: config.yml
      - name: module-config
        configMap:
          name: netherlandsbot-core-config
          items:
          - key: tcp-module
            path: TCPModule.yml
          - key: hoi-module
            path: HoiModule.yml  
      - name: modules
        persistentVolumeClaim:
          claimName: modules
