manifests/prodlab/bots/reactioner-bot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reactioner-bot
  namespace: prodlab
  labels:
    app.kubernetes.io/name: reactioner-bot
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: reactioner-bot
  template:
    metadata:
      labels:
        app.kubernetes.io/name: reactioner-bot
    spec:
      automountServiceAccountToken: false
      containers:
      - name: reactioner-bot
        imagePullPolicy: Always
        image: docker-registry.k8s.array21.dev/reactioner-bot:latest
        securityContext:
          capabilities:
            drop:
            - CAP_NET_RAW
        volumeMounts:
        - name: config
          mountPath: /config/
      volumes:
      - name: config
        configMap:
          name: reactioner-bot
          items:
          - key: config
            path: config.yml
