manifests/prodlab/bots/too-much-spare-time-bot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: too-much-spare-time-bot
  namespace: prodlab
  labels:
    app.kubernetes.io/name: too-much-spare-time-bot
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: too-much-spare-time-bot
  template:
    metadata:
      labels:
        app.kubernetes.io/name: too-much-spare-time-bot
    spec:
      automountServiceAccountToken: false
      containers:
      - name: too-much-spare-time-bot
        imagePullPolicy: Always
        image: docker-registry.k8s.array21.dev/too-much-spare-time-bot:latest
        securityContext:
          capabilities:
            drop:
            - CAP_NET_RAW
        volumeMounts:
        - name: config
          mountPath: /app/
      volumes:
      - name: config
        configMap:
          name: too-much-spare-time-bot
          items:
          - key: config
            path: config.yaml
